Updated the copyright.

--- a/README
+++ b/README
@@ -11,7 +11,7 @@
 Legal
 -------------------------------------------------------------------------------
 
-Copyright © 2011, Luke A. Guest & David Rees, All Rights Reserved.
+Copyright © 2011-2012, Luke A. Guest & David Rees, All Rights Reserved.
 
 License is GPL v2 until further notice and is subject to change during
 development.
